# rally

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pip-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sp500.csv
logs/: events.out.tfevents.1733066008.Ariss-MacBook-Pro.local.32282.0
notebooks/: rl_example.ipynb
pipeline/: main.py
src/: main.py  rl_env.py
tests/: test_dca.py  test_main.py
